--- a/all.css
+++ b/all.css
@@ -15,7 +15,10 @@
 
   .main-area {
     background-color: rgba(32, 32, 32, 0.8);
-    margin: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1500px;
     padding-bottom: 400px;
     padding-top: 50px;
     border-radius: 5px;
@@ -24,4 +27,26 @@
     font-family: "Satisfy", cursive;
     font-size: 110px;
     margin: 0px;
+  }
+  button {
+    color: white;
+    background-color: rgba(32, 32, 32, 0.5);
+    width: 200px;
+    height: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    vertical-align: middle;
+  }
+  .images {
+    height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+  }
+  .description {
+    width: 1000px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 80px;
   }
