--- a/all.css
+++ b/all.css
@@ -3,7 +3,7 @@
     height: 100%;
     background-position: center;
     background-size: cover;
-    background-image: url("images/icyWasteland.png");
+    background-image: url("images/icyWastelandEDIT.png");
     background-attachment: fixed;
     margin-top: 0px;
     padding-top: 100px;
@@ -49,4 +49,9 @@
     text-align: center;
     display: inline-block;
     margin-top: 80px;
+  }
+  .header {
+    margin-top: 75px;
+    margin-bottom: 100px;
+    font-family: 'Sono', sans-serif;
   }
