--- a/all.css
+++ b/all.css
@@ -16,9 +16,8 @@
   .main-area {
     background-color: rgba(32, 32, 32, 0.8);
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 1500px;
+    margin-left: 50px;
+    margin-right: 50px;
     padding-bottom: 400px;
     padding-top: 50px;
     border-radius: 5px;
@@ -38,14 +37,19 @@
     vertical-align: middle;
   }
   .images {
-    height: 500px;
     display: block;
+    width: 1000px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 5px;
+    position: relative;
+    object-fit: contain;
+    max-width: 90%;
+    max-height: 90%
   }
   .description {
-    width: 1000px;
+    margin-left: 50px;
+    margin-right: 50px;
     text-align: center;
     display: inline-block;
     margin-top: 80px;
