--- a/all.css
+++ b/all.css
@@ -16,8 +16,10 @@
   .main-area {
     background-color: rgba(32, 32, 32, 0.8);
     display: block;
-    margin-left: 50px;
-    margin-right: 50px;
+    width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 95%;
     padding-bottom: 400px;
     padding-top: 50px;
     border-radius: 5px;
